2005-09-07  Timo Schulz  <ts@g10code.com>

	* common.c: Removed unused code.
	* intern.h: Likewise.

2005-09-07  Timo Schulz  <ts@g10code.com>

	* olflange.cpp (ul_release): New. Wrapper with error checking
	around UlRelease.
	(InstallCommands): Separate test for type and if string is empty.
	
2005-09-06  Werner Koch  <wk@g10code.com>

	* engine-gpgme.c (op_decrypt_stream): Factored most code out to ..
	(decrypt_stream): .. new.
	(op_decrypt_stream_to_buffer): Simplified accordingly.  Fixed
	possible buffer overflow when trying to make it a string. 
	(op_decrypt_stream_to_gpgme): New.

	* pgpmime.c, pgpmime.h: New.
	* rfc822parse.h, rfc822parse.c: New.  Taken from GnuPG 1.9.

2005-09-06  Timo Schulz  <ts@g10code.com>

	* config-dialog.c (get_open_file_name): Correctly terminated filter.
	New parameter for the title. Changed all callers.
	(get_folder): Likewise.
	
2005-09-01  Werner Koch  <wk@g10code.com>

	* gpgmsg.cpp (get_pgp_armor_type): New.
	(gatherAttachmentInfo):  Enhanced to detect text/plain pgp.
	(verify): Removed.
	(decrypt): Do clearsig verification here.

	* gpgmsg.cpp (decrypt): Kludge to workaround OL not updating a
	window.
	* msgcache.c (msgcache_get_from_mapi): New.
	* display.cpp (find_message_window): Don't use the GpgMsg function
	to to the string compare.
	* gpgmsg.cpp (matchesString): Removed.

	* msgcache.c (msgcache_set_active): Removed.
	(msgcache_get): Rewritten.
	(msgcache_put): Now uses PR_CONVERSATION_INDEX as key.  Update
	existing entries.

	* olflange.cpp (OnRead): Removed msgcache_set_active.
	(InstallCommands): Now uses the ConversationIndex to match the
	reply with the message.

2005-08-31  Werner Koch  <wk@g10code.com>

	* olflange.cpp (DllRegisterServer): Define a CLSID and set the
	ThreadingModel.

2005-08-30  Werner Koch  <wk@g10code.com>

	Renamed from "outlgpg" to "gpgol".

	More or less finished this major rewrite.

2005-08-26  Werner Koch  <wk@g10code.com>

	* MapiGPGME.cpp, MapiGPGME.h: Removed.