@@ -1,43 +1,0 @@
-/* HashTable.h
- *	Copyright (C) 2005 g10 Code GmbH
- *
- * This file is part of GPGol.
- *
- * GPGol is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public License
- * as published by the Free Software Foundation; either version 2.1 
- * of the License, or (at your option) any later version.
- *  
- * GPGol is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
- * General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public License
- * along with GPGol; if not, write to the Free Software Foundation, 
- * Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA 
- */
-#ifndef GPGOL_HASHTABLE_H
-#define GPGOL_HASHTABLE_H
-
-class HashTable
-{
-private:
-    void **table;
-    unsigned int n;
-    unsigned int pos;
-
-public:
-    HashTable ();
-    HashTable (unsigned int n);
-    ~HashTable ();
-
-public:
-    unsigned size ();
-    void put(const char *key, void* val);
-    void* get(const char *key);
-    void* get(int index);
-    void clear ();
-};
-
-#endif /*GPGOL_HASHTABLE_H*/
